--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,14 @@
     <string name="new_task">New Task</string>
     <string name="add_reminder">Add Reminder</string>
     <string name="when_due">When due.</string>
-    <string name="before_due">%1$d %2$s before due.</string>
+
     <string name="reminder_dialog">Add a Reminder</string>
     <string name="create_reminder">Create Reminder</string>
     <string name="cancel">Cancel</string>
+    <string name="before_due_1">%1$s before due.</string>
+    <string name="before_due_2">%1$s &amp; %2$s before due.</string>
+    <string name="before_due_3">%1$s, %2$s &amp; %3$s before due.</string>
+    <string name="before_due_4">%1$s, %2$s, %3$s &amp; %4$s before due.</string>
     <string-array name="time_type">
         <item>Minutes</item>
         <item>Hours</item>
@@ -23,19 +27,19 @@
         <item>Weeks</item>
     </string-array>
     <plurals name="minute">
-        <item quantity="one">%d minute before due.</item>
-        <item quantity="other">%d minutes before due.</item>
+        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minutes</item>
     </plurals>
     <plurals name="hour">
-        <item quantity="one">%d hour before due.</item>
-        <item quantity="other">%d hours before due.</item>
+        <item quantity="one">%d hour</item>
+        <item quantity="other">%d hours</item>
     </plurals>
     <plurals name="day">
-        <item quantity="one">%d day before due.</item>
-        <item quantity="other">%d days before due.</item>
+        <item quantity="one">%d day</item>
+        <item quantity="other">%d days</item>
     </plurals>
     <plurals name="weeks">
-        <item quantity="one">%d week before due.</item>
-        <item quantity="other">%d weeks before due.</item>
+        <item quantity="one">%d week</item>
+        <item quantity="other">%d weeks</item>
     </plurals>
 </resources>
