--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="before_due_2">%1$s &amp; %2$s before due.</string>
     <string name="before_due_3">%1$s, %2$s &amp; %3$s before due.</string>
     <string name="before_due_4">%1$s, %2$s, %3$s &amp; %4$s before due.</string>
+    <string name="reminders">Reminders</string>
     <string-array name="time_type">
         <item>Minutes</item>
         <item>Hours</item>
