--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,25 @@
     <string name="alarm">Alarm</string>
     <string name="notification">Notification</string>
     <string name="repeat_title">Set Repeat Duration</string>
-    <string name="repeat_postive">Set Repeat</string>
+    <string name="repeat_positive">Set Repeat</string>
+    <string name="sunday">Sunday</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="more_often">More Often?</string>
+    <string name="add_repeat_time">Add Repeat Time</string>
+    <string-array name="days_of_the_week">
+        <item>Sun</item>
+        <item>Mon</item>
+        <item>Tue</item>
+        <item>Wed</item>
+        <item>Thur</item>
+        <item>Fri</item>
+        <item>Sat</item>
+    </string-array>
     <string-array name="time_type">
         <item>Minutes</item>
         <item>Hours</item>
@@ -41,6 +59,7 @@
         <item>Months</item>
         <item>Years</item>
     </string-array>
+
     <plurals name="minute">
         <item quantity="one">%d minute</item>
         <item quantity="other">%d minutes</item>
