--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,9 @@
     <string name="set_time">Set Time</string>
     <string name="set_snooze">Set Snooze</string>
     <string name="reset">Reset</string>
+    <string name="test_alarm">Test Alarm</string>
+    <string name="time_default">00:00</string>
+    <string name="snooze_text_2">%1$s and %2$s</string>
     <string-array name="snooze_array">
         <item>15 Mins</item>
         <item>30 Mins</item>
@@ -57,6 +60,20 @@
         <item>2 Hours</item>
         <item>4 Hours</item>
         <item>Custom</item>
+    </string-array>
+    <string-array name="snooze_labels">
+        <item>1m</item>
+        <item>15m</item>
+        <item>5m</item>
+        <item>30m</item>
+        <item>10m</item>
+        <item>60m</item>
+        <item>2h</item>
+        <item>1d</item>
+        <item>4h</item>
+        <item>1w</item>
+        <item>8h</item>
+        <item>30d</item>
     </string-array>
     <string-array name="days_of_the_week">
         <item>Sun</item>
