--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,9 @@
     <string name="test_alarm">Test Alarm</string>
     <string name="time_default">00:00</string>
     <string name="snooze_text_2">%1$s and %2$s</string>
+    <string name="snooze">Snooze</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="snoozed_till">Snoozed until %1$s</string>
     <string-array name="snooze_array">
         <item>15 Mins</item>
         <item>30 Mins</item>
