Added partial repeat support. Making some changes adding start day and refactoring SpanOfTime as well as Repeat.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,8 @@
     <string name="dismiss">Dismiss</string>
     <string name="snoozed_till">Snoozed until %1$s</string>
     <string name="every_day">Every Day</string>
+    <string name="complete">Complete</string>
+    <string name="uncomplete">Uncomplete</string>
     <string-array name="snooze_array">
         <item>15 Mins</item>
         <item>30 Mins</item>
