--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="add_reminder">Add Reminder</string>
     <string name="when_due">When due.</string>
 
+
+    <string name="group_due">Due: %1$d"</string>
+    <string name="group_overdue">Overdue: %1$d"</string>
+
+
     <string name="reminder_add_dialog">Add a Reminder</string>
     <string name="reminder_edit_dialog">Edit Reminder</string>
 
@@ -66,6 +71,7 @@
     <string name="start_day">Start Day</string>
     <string name="task_time">1 Jan 1990</string>
     <string name="remove_repeat">Remove Repeat</string>
+    <string name="new_group">New Group</string>
     <string-array name="snooze_array">
         <item>15 Mins</item>
         <item>30 Mins</item>
