--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,23 @@
     <string name="task_name_label">Task Name</string>
     <string name="select_color">Select Color</string>
     <string name="change_color">Change Color</string>
+    <string-array name="color_picker">
+        <item>#ffa4fff9</item>
+        <item>#ffC70039</item>
+        <item>#ffFFC300</item>
+
+        <item>#ff0bfa00</item>
+        <item>#fffa7900</item>
+        <item>#ffe486ff</item>
+
+        <item>#ffea3355</item>
+        <item>#ff979a9a</item>
+        <item>#ff9b59b6</item>
+
+        <item>#ffaeb6bf</item>
+        <item>#ff73c6b6</item>
+        <item>#ff2ecc71</item>
+    </string-array>
     <string-array name="snooze_array">
         <item>15 Mins</item>
         <item>30 Mins</item>
