--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MakeAReminder</string>
-    <string name="new_reminder">New Reminder</string>
+    <string name="new_reminder">+ New Reminder</string>
     <string name="title">Title</string>
     <string name="time">Time</string>
     <string name="on_off">Toggle Reminder</string>
@@ -31,10 +31,10 @@
     <string name="alarm_reminder">%1$s : %2$s</string>
 
 
-    <string name="time_text_1">%1$s %2$s %3$s.</string>
-    <string name="time_text_2">%1$s %2$s &amp; %3$s %4$s.</string>
-    <string name="time_text_3">%1$s %2$s, %3$s &amp; %4$s %5$s.</string>
-    <string name="time_text_4">%1$s %2$s, %3$s, %4$s &amp; %5$s %6$s.</string>
+    <string name="time_text_1">%1$s %2$s %3$s</string>
+    <string name="time_text_2">%1$s %2$s &amp; %3$s %4$s</string>
+    <string name="time_text_3">%1$s %2$s, %3$s &amp; %4$s %5$s</string>
+    <string name="time_text_4">%1$s %2$s, %3$s, %4$s &amp; %5$s %6$s</string>
 
 
     <string name="reminders">Reminders</string>
@@ -66,8 +66,8 @@
     <string name="dismiss">Dismiss</string>
     <string name="snoozed_till">Snoozed until %1$s</string>
     <string name="every_day">Every Day</string>
-    <string name="complete">Complete</string>
-    <string name="uncomplete">Un-Complete</string>
+    <string name="complete">Mark Complete</string>
+    <string name="incomplete">Mark incomplete</string>
     <string name="start_day">Start Day</string>
     <string name="task_time">1 Jan 1990</string>
     <string name="remove_repeat">Remove Repeat</string>
@@ -76,6 +76,9 @@
     <string name="task_name_label">Task Name</string>
     <string name="select_color">Select Color</string>
     <string name="change_color">Change Color</string>
+    <string name="default_snooze">Default Snooze</string>
+    <string name="default_time">Default Time</string>
+    <string name="default_repeat">Default Repeat</string>
     <string-array name="group_colors">
         <item>#ffff0000</item>
         <item>#ff0000ff</item>
