--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,9 @@
     <string name="default_repeat">Default Repeat</string>
     <string name="default_snooze">Default Snooze</string>
     <string name="default_reminders">Default Reminders</string>
+    <string name="discard_task">Discard Task</string>
+    <string name="no_date">No Date</string>
+    <string name="discard_changes">Discard Changes</string>
     <string-array name="group_colors">
         <item>#ffff0000</item>
         <item>#ff0000ff</item>
