--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">MakeAReminder</string>
-    <string name="new_reminder">+ New Reminder</string>
+    <string name="new_reminder"><u>+ New Reminder</u></string>
     <string name="title">Title</string>
     <string name="time">Time</string>
     <string name="on_off">Toggle Reminder</string>
     <string name="name_label">Name</string>
-    <string name="date_picker_title">Date Of Reminder</string>
+    <string name="date_picker_title">Date Task Due</string>
     <string name="date">Date</string>
     <string name="repeat">Repeat</string>
     <string name="location">Location</string>
@@ -52,11 +52,11 @@
     <string name="thursday">Thursday</string>
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
-    <string name="more_often">More Often?</string>
+    <string name="more_often"><u>More Often?</u></string>
     <string name="add_repeat_time">Add Repeat Time</string>
     <string name="save">Save</string>
-    <string name="set_date">Set Date</string>
-    <string name="set_time">Set Time</string>
+    <string name="set_date"><u>Set Date</u></string>
+    <string name="set_time"><u>Set Time</u></string>
     <string name="set_snooze">Set Snooze</string>
     <string name="reset">Reset</string>
     <string name="test_alarm">Test Alarm</string>
@@ -81,7 +81,7 @@
     <string name="set_default_repeat">Set Default Repeat</string>
     <string name="clear_time">Clear Time</string>
     <string name="clear_default_snooze">Clear Default Snooze</string>
-    <string name="clear_snooze">clear_snooze</string>
+    <string name="clear_snooze">Clear Snooze</string>
     <string name="snooze_for">Snooze For:</string>
     <string name="every">Every</string>
     <string name="default_time">Default Time</string>
@@ -92,6 +92,10 @@
     <string name="no_date">No Date</string>
     <string name="no_default_time">No Default Time</string>
     <string name="no_default_repeat">No Default Repeat</string>
+    <string name="set_quick_snooze"><u>Set Quick Snooze</u></string>
+    <string name="set_repeat"><u>Set Repeat</u></string>
+    <string name="due">Due</string>
+    <string name="alerts">Alerts</string>
     <string-array name="group_colors">
         <item>#ffff0000</item>
         <item>#ff0000ff</item>
