--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="more_often"><u>More Often?</u></string>
-    <string name="add_repeat_time">Add Repeat Time</string>
+    <string name="add_repeat_time"><u>+ Repeat Time</u></string>
     <string name="save">Save</string>
     <string name="set_date"><u>Set Date</u></string>
     <string name="set_time"><u>Set Time</u></string>
@@ -96,6 +96,7 @@
     <string name="set_repeat"><u>Set Repeat</u></string>
     <string name="due">Due</string>
     <string name="alerts">Alerts</string>
+    <string name="last_day">Last Day</string>
     <string-array name="group_colors">
         <item>#ffff0000</item>
         <item>#ff0000ff</item>
