--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="dismiss">Dismiss</string>
     <string name="snoozed_till">Snoozed until %1$s</string>
     <string name="every_day">Every Day</string>
-    <string name="complete">Mark Complete</string>
+    <string name="mark_complete">Mark Complete</string>
     <string name="incomplete">Mark incomplete</string>
     <string name="start_day">Start Day</string>
     <string name="task_time">1 Jan 1990</string>
@@ -97,6 +97,9 @@
     <string name="due">Due</string>
     <string name="alerts">Alerts</string>
     <string name="last_day">Last Day</string>
+    <string name="info">Info</string>
+    <string name="set_snooze_duration">Set Snooze Duration</string>
+    <string name="complete">Complete</string>
     <string-array name="group_colors">
         <item>#ffff0000</item>
         <item>#ff0000ff</item>
